force-app/main/default/objects/User/fields/Aprobador_cambios_en_cuentas__c.field-meta.xml
<CustomField>
    <fullName>Aprobador_cambios_en_cuentas__c</fullName>
    <label>Aprobador cambios en cuentas</label>
    <relationshipName>Aprobador_cambios_en_cuentas</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>