force-app/main/default/objects/User/fields/Aprobador_de_motos__c.field-meta.xml
<CustomField>
    <fullName>Aprobador_de_motos__c</fullName>
    <label>Aprobador de motos</label>
    <relationshipName>Aprobador_de_motos</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>