force-app/main/default/objects/User/fields/Aprobador_Genesis__c.field-meta.xml
<CustomField>
    <fullName>Aprobador_Genesis__c</fullName>
    <label>Aprobador Genesis</label>
    <relationshipName>Aprobador_Genesis</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>