force-app/main/default/objects/User/fields/Aprobador_Hero__c.field-meta.xml
<CustomField>
    <fullName>Aprobador_Hero__c</fullName>
    <label>Aprobador Hero</label>
    <relationshipName>Aprobador_Hero</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>