force-app/main/default/objects/User/fields/Aprobador_HINO__c.field-meta.xml
<CustomField>
    <fullName>Aprobador_HINO__c</fullName>
    <label>Aprobador HINO</label>
    <relationshipName>Aprobador_HINO</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>