force-app/main/default/objects/User/fields/Aprobador_JMC__c.field-meta.xml
<CustomField>
    <fullName>Aprobador_JMC__c</fullName>
    <label>Aprobador JMC</label>
    <relationshipName>Aprobador_JMC</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>