force-app/main/default/objects/User/fields/Aprobador_KIA__c.field-meta.xml
<CustomField>
    <fullName>Aprobador_KIA__c</fullName>
    <label>Aprobador KIA</label>
    <relationshipName>Aprobador_KIA</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>