force-app/main/default/objects/User/fields/Aprobador_Suzuki__c.field-meta.xml
<CustomField>
    <fullName>Aprobador_Suzuki__c</fullName>
    <label>Aprobador Suzuki</label>
    <relationshipName>Aprobador_Suzuki</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>