force-app/main/default/objects/User/fields/Aprobador_Toyota__c.field-meta.xml
<CustomField>
    <fullName>Aprobador_Toyota__c</fullName>
    <label>Aprobador Toyota</label>
    <relationshipName>Aprobador_Toyota</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>