force-app/main/default/objects/User/fields/Aprobador_Yamaha__c.field-meta.xml
<CustomField>
    <fullName>Aprobador_Yamaha__c</fullName>
    <label>Aprobador_Yamaha</label>
    <relationshipName>Aprobador_Yamaha</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>