force-app/main/default/objects/User/fields/Asignaci_n_V_A_por_vendedor__c.field-meta.xml
<CustomField>
    <fullName>Asignaci_n_V_A_por_vendedor__c</fullName>
    <label>Asignación V.A por vendedor</label>
    <relationshipName>Asignaci_n_V_A_por_vendedor</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>