force-app/main/default/objects/User/fields/Id_Empleado__c.field-meta.xml
<CustomField>
    <fullName>Id_Empleado__c</fullName>
    <label>Id Empleado</label>
    <length>10</length>
    <type>Text</type>
</CustomField>