force-app/main/default/objects/User/fields/Marca_texto__c.field-meta.xml
<CustomField>
    <fullName>Marca_texto__c</fullName>
    <formula>IF ( INCLUDES ( Marca__c , &quot;KIA&quot; ), &quot;KIA; &quot;, null) &amp;
IF ( INCLUDES ( Marca__c  , &quot;TOYOTA&quot; ), &quot;TOYOTA; &quot;, null) &amp;
IF ( INCLUDES ( Marca__c  , &quot;HINO&quot; ), &quot;HINO; &quot;, null) &amp;
IF ( INCLUDES ( Marca__c  , &quot;SUZUKI&quot; ), &quot;SUZUKI; &quot;, null) &amp;
IF ( INCLUDES ( Marca__c  , &quot;JMC&quot; ), &quot;JMC; &quot;, null) &amp;
IF ( INCLUDES ( Marca__c  , &quot;HERO&quot; ), &quot;HERO; &quot;, null) &amp;
IF ( INCLUDES ( Marca__c  , &quot;YAMAHA&quot; ), &quot;YAMAHA; &quot;, null) &amp;
IF ( INCLUDES ( Marca__c  , &quot;HAOJUE&quot; ), &quot;HAOJUE; &quot;, null) &amp;
IF ( INCLUDES ( Marca__c  , &quot;GENESIS&quot; ), &quot;GENESIS; &quot;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marca texto</label>
    <type>Text</type>
</CustomField>