force-app/main/default/objects/User/fields/Nombre_Aprobador_KIA__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Aprobador_KIA__c</fullName>
    <formula>Aprobador_KIA__r.FirstName + &apos; &apos;+ Aprobador_KIA__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Aprobador KIA</label>
    <type>Text</type>
</CustomField>