force-app/main/default/objects/User/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <label>Sucursal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Altamira</fullName>
            </value>
            <value>
                <fullName>Chinandega</fullName>
            </value>
            <value>
                <fullName>Estelí</fullName>
            </value>
            <value>
                <fullName>Granada</fullName>
            </value>
            <value>
                <fullName>Juigalpa</fullName>
            </value>
            <value>
                <fullName>Kia El Retiro</fullName>
            </value>
            <value>
                <fullName>León</fullName>
            </value>
            <value>
                <fullName>Matagalpa</fullName>
            </value>
            <value>
                <fullName>Plaza España</fullName>
            </value>
            <value>
                <fullName>Puerto Cabezas</fullName>
            </value>
            <value>
                <fullName>Rivas</fullName>
            </value>
            <value>
                <fullName>Motoplaza Masaya</fullName>
            </value>
            <value>
                <fullName>Motoplaza GENESIS</fullName>
            </value>
            <value>
                <fullName>Multicentro las Américas</fullName>
            </value>
            <value>
                <fullName>Acahualinca</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>